[project]
name = "biomech"
version = "0.1.0"
description = "Biomechanical simulation and reinforcement learning environment"
requires-python = ">=3.12"
dependencies = [
    "myosuite",
    "gymnasium",
    "stable-baselines3",
    "imageio",
    "imageio[ffmpeg]",
    "moviepy",
    "ipykernel>=7.2.0",
]
