[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomech-rl-tutorial"
version = "0.1.0"
description = "Biomechanical simulation and reinforcement learning environment"
requires-python = ">=3.12"
dependencies = [
    "myosuite",
    "gymnasium",
    "stable-baselines3",
    "imageio",
    "imageio[ffmpeg]",
    "moviepy",
    "ipykernel>=7.2.0",
]

[tool.setuptools]
py-modules = [
    "train",
    "train_original",
    "visualize",
    "reward_tutorial",
    "dexterous_env",
    "inspect_env",
    "tutorial"
]
